banner image responsive

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,13 +35,40 @@
       <figure>
         <div id="slider-banner">
           <div class="slider__slide--grey-background">
-            <img class="img-responsive" src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+            <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" media="(min-width: 1501px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-desktop-1500w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-laptop-1200w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-tablet-992w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-769w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
+              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
+            </picture>
+            <!-- <img class="img-responsive" src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma"> -->
           </div>
           <div class="slider__slide--grey-background">
-            <img class="img-responsive" src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
+            <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" media="(min-width: 1501px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-desktop-1500w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-laptop-1200w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-tablet-992w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-769w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-576w.jpg" media="(max-width: 575px)" />
+              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" alt="Colíseo romano.">
+            </picture>
+            <!-- <img class="img-responsive" src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma"> -->
           </div>
           <div class="slider__slide--grey-background">
-            <img class="img-responsive" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
+            <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" media="(min-width: 1501px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-desktop-1500w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-laptop-1200w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-tablet-992w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-769w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
+              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" alt="Perfil de bronce de Julio César.">
+            </picture>
+            <!-- <img class="img-responsive" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César"> -->
           </div>
         </div>
         <figcaption class="container"><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
@@ -55,7 +82,7 @@
           algunas de sus gestas más famosas y como vivio uno de los hombres más importantes del mundo antiguo. Miembro del Primer <span id="dots">...</span><span id="read-more"> Triumvirato, general de campañas militares
           como la conquista de la Galia y la guerra civil romana que llevo a César a ser el artificie final de la muerte de la república romana y posterior auge de un imperio.</span> 
         </p>
-        <button id="read-more-button" >Leer más</button><i id="rm-icon" class="not-active"></i>
+        <button id="read-more-button" >Leer más </button><span id="rm-icon" class="not-active"></span>
       </div>
     </section>
     <section class="entity-card-section">
