--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -96,10 +96,7 @@
           </p>
           <figure>
             <img 
-              sizes="(max-width: 575px) 416px,
-                     (max-width: 991px) 489px,
-                     (max-width: 1199px) 584px,
-                     855px"
+              sizes="(max-width: 416px) 100vw, 75vw"
               srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg 416w,
                       ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg 489w,
                       ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg 584w, 
@@ -276,7 +273,7 @@
             </p>
            <figure>
               <img 
-                sizes="(max-width: 575px) 416px, (max-width: 991px) 489px, (max-width: 1199px) 584px, 855px"
+                sizes="75vw"
                 srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-416w.jpg 416w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-489w.jpg 489w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-584w.jpg 584w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg 855w"
                 src="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg" 
                 alt="Mapa del mundo romano despues de la conquista de la Galia">
