Final fixes images

--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -33,7 +33,7 @@
   <main>
     <div class="entity-breadcrumb-section container">
       <ul>
-        <li><a href="../categorias.html"><span>Categorias</span></a><i class="breadcrumb-icon"></i></li>
+        <li><a href="../categorias.html"><span>Categorias</span></a><span class="breadcrumb-icon"></span></li>
         <li><span>Guerra de las Galias</span></li>
       </ul>
     </div>
@@ -273,7 +273,7 @@
             </p>
            <figure>
               <img 
-                sizes="75vw"
+                sizes="(max-width: 416px) 100vw, 75vw"
                 srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-416w.jpg 416w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-489w.jpg 489w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-584w.jpg 584w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg 855w"
                 src="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg" 
                 alt="Mapa del mundo romano despues de la conquista de la Galia">
@@ -312,7 +312,7 @@
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
-        <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</p>
+        <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>. Las imágenes también estan bajo la misma licencia si las originales poseen la misma, visita la página de <a href="../enlaces.html">Enlaces</a> para saber cuales tienen la misma licencia.</p>
       </div>
     </div>
   </footer>
