Added sharp transform to webp

--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -44,10 +44,19 @@
             <div class="card-container card-appearance-categories">
               <div class="card">
                 <picture>
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-382w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-382w.jpg" media="(min-width: 992px)" />
+
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-740w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-740w.jpg" media="(min-width: 769px)" />
+
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-650w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-650w.jpg" media="(min-width: 576px)" />
+
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg?as=webp" media="(min-width: 442px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" media="(min-width: 442px)" />
+
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-415w.jpg?as=webp" media="(max-width: 441px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-415w.jpg" media="(max-width: 441px)" />
                   <img class="w-100 card__image" src="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">        
                 </picture>
