--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -41,9 +41,16 @@
       <div class="container">
         <h1>La Guerra de las Galias</h1>
         <picture>
+          <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-1100w.jpg?as=webp" media="(min-width: 1501px)" type="image/webp" />
           <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-1100w.jpg" media="(min-width: 1501px)" />
+
+          <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-910w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
           <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-910w.jpg" media="(min-width: 992px)" />
+
+          <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-720w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
           <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-720w.jpg" media="(min-width: 769px)" />
+
+          <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-540w.jpg?as=webp" media="(max-width: 768px)" type="image/webp" />
           <source srcset="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-540w.jpg" media="(max-width: 768px)" />
           <img class="w-100" src="../../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-1100w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">
         </picture>
@@ -95,14 +102,30 @@
             decidio impedirlo con la excusa de que amenazarian demasiado a las provincias de la Galia Cisalpina, las cuales gobernaba en ese momento.
           </p>
           <figure>
-            <img 
+            <picture>
+              <source sizes="(max-width: 416px) 100vw, 75vw"
+                srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg?as=webp 416w,
+                        ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg?as=webp 489w,
+                        ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg?as=webp 584w, 
+                        ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg?as=webp 855w"
+                type="image/webp"
+                />
+                <img sizes="(max-width: 416px) 100vw, 75vw"
+                  srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg 416w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg 489w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg 584w, 
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg 855w"
+                  src="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg" 
+                  alt="Mapa del mundo romano antes de la conquista de la Galia">
+            </picture>
+            <!-- <img 
               sizes="(max-width: 416px) 100vw, 75vw"
               srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg 416w,
                       ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg 489w,
                       ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg 584w, 
                       ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg 855w"
               src="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg" 
-              alt="Mapa del mundo romano antes de la conquista de la Galia">
+              alt="Mapa del mundo romano antes de la conquista de la Galia"> -->
             <figcaption><span>Mapa del mundo romano antes de la conquista de la Galia (58 a.c.) - Territorio en Amarillo</span></figcaption>
           </figure>
         </section>
@@ -271,11 +294,23 @@
               a su jefe, que fue apresado.
             </p>
            <figure>
-              <img 
-                sizes="(max-width: 416px) 100vw, 75vw"
-                srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-416w.jpg 416w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-489w.jpg 489w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-584w.jpg 584w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg 855w"
-                src="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg" 
-                alt="Mapa del mundo romano despues de la conquista de la Galia">
+              <picture>
+                <source 
+                  sizes="(max-width: 416px) 100vw, 75vw"
+                  srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-416w.jpg?as=webp 416w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-489w.jpg?as=webp 489w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-584w.jpg?as=webp 584w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg?as=webp 855w"
+                  type="image/webp" />
+                <img 
+                  sizes="(max-width: 416px) 100vw, 75vw"
+                  srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-416w.jpg 416w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-489w.jpg 489w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-584w.jpg 584w,
+                          ../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg 855w"
+                  src="../../static/pagina-detalles/guerra-galias/imagen-cesare-dopo/cesare-dopo-gallia-50ac-855w.jpg" 
+                  alt="Mapa del mundo romano despues de la conquista de la Galia">
+              </picture>
               <figcaption><span>Mapa del mundo romano despues de la conquista de la Galia (50 a.c.) - Territorio en Amarillo</span></figcaption>
             </figure>
           </section>
