Index images to webp

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,33 +36,66 @@
         <div id="slider-banner">
           <div class="slider__slide--grey-background">
             <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg?as=webp" media="(min-width: 1501px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" media="(min-width: 1501px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-desktop-1500w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-desktop-1500w.jpg" media="(min-width: 1200px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-laptop-1200w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-laptop-1200w.jpg" media="(min-width: 992px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-tablet-992w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-tablet-992w.jpg" media="(min-width: 769px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-769w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-769w.jpg" media="(min-width: 576px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
               <img class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
             </picture>
           </div>
           <div class="slider__slide--grey-background">
             <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg?as=webp" media="(min-width: 1501px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" media="(min-width: 1501px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-desktop-1500w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-desktop-1500w.jpg" media="(min-width: 1200px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-laptop-1200w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-laptop-1200w.jpg" media="(min-width: 992px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-tablet-992w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-tablet-992w.jpg" media="(min-width: 769px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-769w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-769w.jpg" media="(min-width: 576px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-576w.jpg" media="(max-width: 575px)" />
               <img class="img-responsive" src="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" alt="Colíseo romano.">
             </picture>
           </div>
           <div class="slider__slide--grey-background">
             <picture>
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg?as=webp" media="(min-width: 1501px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" media="(min-width: 1501px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-desktop-1500w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-desktop-1500w.jpg" media="(min-width: 1200px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-laptop-1200w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-laptop-1200w.jpg" media="(min-width: 992px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-tablet-992w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-tablet-992w.jpg" media="(min-width: 769px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-769w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-769w.jpg" media="(min-width: 576px)" />
+
+              <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
               <img class="img-responsive" src="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" alt="Perfil de bronce de Julio César.">
             </picture>
@@ -89,6 +122,13 @@
         <div class="card-container slide-left-index first-card-index">
           <div class="card">
             <picture>
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-375w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-255w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-740w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-650w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-550w.jpg?as=webp" media="(min-width: 442px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg?as=webp" media="(max-width: 441px)" type="image/webp" />
+
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-375w.jpg" media="(min-width: 1200px)" />
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-255w.jpg" media="(min-width: 992px)" />
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-740w.jpg" media="(min-width: 769px)" />
@@ -108,6 +148,13 @@
         <div class="card-container second-card-index">
           <div class="card">
             <picture>
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-375w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-255w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-740w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-650w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-550w.jpg?as=webp" media="(min-width: 442px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg?as=webp" media="(max-width: 441px)" type="image/webp" />
+
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-375w.jpg" media="(min-width: 1200px)" />
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-255w.jpg" media="(min-width: 992px)" />
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-740w.jpg" media="(min-width: 769px)" />
@@ -127,6 +174,13 @@
         <div class="card-container slide-right-index third-card-index">
           <div class="card">
             <picture>
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-375w.jpg?as=webp" media="(min-width: 1200px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-255w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-740w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-650w.jpg?as=webp" media="(min-width: 576px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-550w.jpg?as=webp" media="(min-width: 442px)" type="image/webp" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg?as=webp" media="(max-width: 441px)" type="image/webp" />
+
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-375w.jpg" media="(min-width: 1200px)" />
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-255w.jpg" media="(min-width: 992px)" />
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-740w.jpg" media="(min-width: 769px)" />
@@ -160,6 +214,11 @@
             </div>
           </div>
           <picture>
+            <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-1100w.jpg?as=webp" media="(min-width: 1501px)" type="image/webp" />
+            <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-910w.jpg?as=webp" media="(min-width: 992px)" type="image/webp" />
+            <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-720w.jpg?as=webp" media="(min-width: 769px)" type="image/webp" />
+            <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-540w.jpg?as=webp" media="(max-width: 768px)" type="image/webp" />
+
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-1100w.jpg" media="(min-width: 1501px)" />
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-910w.jpg" media="(min-width: 992px)" />
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-720w.jpg" media="(min-width: 769px)" />
