--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -35,10 +35,8 @@
       <div class="container">
         <h1>Sobre nosotros y Julio César</h1>
           <div class="svg-container">
-            <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <svg
-              xmlns:svg="http://www.w3.org/2000/svg"
-              xmlns="http://www.w3.org/2000/svg" version="1.0" width="100%" viewbox="0 0 375 305"
+              xmlns="http://www.w3.org/2000/svg" width="100%" viewbox="0 0 375 305"
               height="100%">
               <g transform="translate(-260,-150)">
                 <g fill="green">
@@ -92,8 +90,6 @@
               <source srcset="../static/pagina-presentacion/julius-caesar-340w.jpg?as=webp 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg?as=webp 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg?as=webp 2x" type="image/webp" />
               <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x" src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César">
             </picture>
-            <!-- <img class="img-responsive" srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x" -->
-            <!-- src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César"> -->
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
           <p>Todo el trabajo realizado e información usada en este portal ha sido extraido de fuentes externas. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
