--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div>
         <div class="logo-container">
-          <a href="index.html"><img width="90" height="60" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
+          <a href="index.html"><img width="90" height="60" loading="lazy" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
         </div>
         <p class="page-title">
           Portal biográfico
@@ -53,7 +53,7 @@
 
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
-              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
+              <img loading="lazy" class="img-responsive" src="../static/pagina-inicio/banner/imagen1/banner-statue-julius-caesar-large-1920w.jpg" alt="Estatua de Julio César en Roma">
             </picture>
           </div>
           <div class="slider__slide--grey-background">
@@ -75,7 +75,7 @@
 
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-mobile-576w.jpg" media="(max-width: 575px)" />
-              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" alt="Colíseo romano.">
+              <img loading="lazy" class="img-responsive" src="../static/pagina-inicio/banner/imagen2/banner-rome-colosseum-large-1920w.jpg" alt="Colíseo romano.">
             </picture>
           </div>
           <div class="slider__slide--grey-background">
@@ -97,7 +97,7 @@
 
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-576w.jpg?as=webp" media="(max-width: 575px)" type="image/webp" />
               <source srcset="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-mobile-576w.jpg" media="(max-width: 575px)" />
-              <img class="img-responsive" src="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" alt="Perfil de bronce de Julio César.">
+              <img loading="lazy" class="img-responsive" src="../static/pagina-inicio/banner/imagen3/banner-julius-caesar-large-1920w.jpg" alt="Perfil de bronce de Julio César.">
             </picture>
           </div>
         </div>
@@ -135,7 +135,7 @@
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-650w.jpg" media="(min-width: 576px)" />
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-550w.jpg" media="(min-width: 442px)" />
               <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg" media="(max-width: 441px)" />
-              <img class="card__image" src="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg" alt="Vista aerea del coliseo romano">
+              <img loading="lazy" class="card__image" loading="lazy" src="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg" alt="Vista aerea del coliseo romano">
             </picture>
             <div class="card__text">
               <h2 class="card__title">Categorias</h2>
@@ -161,7 +161,7 @@
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-650w.jpg" media="(min-width: 576px)" />
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-550w.jpg" media="(min-width: 442px)" />
               <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg" media="(max-width: 441px)" />
-              <img class="card__image" src="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg" alt="Estatua de bronze de Julio César">
+              <img loading="lazy" class="card__image" loading="lazy" src="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg" alt="Estatua de bronze de Julio César">
             </picture>
             <div class="card__text">
               <h2 class="card__title">Presentación</h2>
@@ -187,7 +187,7 @@
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-650w.jpg" media="(min-width: 576px)" />
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-550w.jpg" media="(min-width: 442px)" />
               <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg" media="(max-width: 441px)" />
-              <img class="card__image" src="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg" alt="Carretera romana">
+              <img loading="lazy" class="card__image" src="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg" alt="Carretera romana">
             </picture>
             <div class="card__text">
               <h2 class="card__title">Enlaces</h2>
@@ -223,7 +223,7 @@
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-910w.jpg" media="(min-width: 992px)" />
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-720w.jpg" media="(min-width: 769px)" />
             <source srcset="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-540w.jpg" media="(max-width: 768px)" />
-            <img class="column-clip m-0 w-100" src="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-1100w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">
+            <img loading="lazy" class="column-clip m-0 w-100" src="../static/pagina-inicio/imagen-clip-path/siege-alesia-vercingetorix-cesar-1100w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">
           </picture>
                 
         </div>
@@ -243,7 +243,7 @@
       </div>
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" loading="lazy" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
         <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>. Las imágenes también estan bajo la misma licencia si las originales poseen la misma, visita la página de <a href="./enlaces.html">Enlaces</a> para saber cuales tienen la misma licencia.</p>
       </div>
     </div>
