Added defer to script

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
   <title>Página de inicio</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <script type="module" src="../js/app.js"></script>
+  <script defer type="module" src="../js/app.js"></script>
   <link rel="icon" href="../static/spqr-logo.svg" type="image/x-icon" />
 </head>
 <body>
