--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -7,7 +7,7 @@
   <title>Enlaces</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <script type="module" src="../js/app.js"></script>
+  <script defer type="module" src="../js/app.js"></script>
   <link rel="icon" href="../static/spqr-logo.svg" type="image/x-icon" />
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
       <div>
         <div class="logo-container">
-          <a href="index.html"><img width="90" height="60" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
+          <a href="index.html"><img width="90" height="60" loading="lazy" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
         </div>
         <p class="page-title">
           Portal biográfico
@@ -107,7 +107,7 @@
       </div>
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" loading="lazy" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
         <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>. Las imágenes también estan bajo la misma licencia si las originales poseen la misma, visita la página de <a href="./enlaces.html">Enlaces</a> para saber cuales tienen la misma licencia.</p>
       </div>
     </div>
