--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -7,7 +7,7 @@
   <title>Categorias</title>
 
   <link rel="stylesheet" href="../css/styles.css" />
-  <script defer type="module" src="../js/app.js"></script>
+  <script type="module" src="../js/app.js"></script>
   <link rel="icon" href="../static/spqr-logo.svg" type="image/x-icon" />
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
       <div>
         <div class="logo-container">
-          <a href="index.html"><img width="90" height="60" loading="lazy" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
+          <a href="index.html"><img width="90" height="60" class="logo" src="../static/page-logo.svg" alt="Logo"></a>
         </div>
         <p class="page-title">
           Portal biográfico
@@ -58,7 +58,7 @@
 
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-415w.jpg?as=webp" media="(max-width: 441px)" type="image/webp" />
                   <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-415w.jpg" media="(max-width: 441px)" />
-                  <img loading="lazy" class="w-100 card__image" src="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">        
+                  <img class="w-100 card__image" src="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">        
                 </picture>
                 <div class="card__text">
                   <h3 class="card__title">Guerra de las Galias</h3>
@@ -88,7 +88,7 @@
       </div>
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
-        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" loading="lazy" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img width="70" height="20" class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
         <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>. Las imágenes también estan bajo la misma licencia si las originales poseen la misma, visita la página de <a href="./enlaces.html">Enlaces</a> para saber cuales tienen la misma licencia.</p>
       </div>
     </div>
